[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "real_world"
version = "0.1.0"
description = "real_world template"
readme = "README.md"
authors = [
    {name = "Intri Desktop", email = "intriqet@outlook.com"},
]

classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

dependencies = [
    # Packages this project requires
]
[project.optional-dependencies]
dev = [
    # Development tools to work on this project
    "sphinx==7.2.2",
    "sphinxcontrib-plantuml==0.25",
    "pip-tools==7.3.0"
]
test = [
    # Testing tools to test this project
    "pytest==7.4.0",
    "tox==4.9.0",
    "behave==1.2.6"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
