# Python Real-World Projects
# Project Zero: A template for other projects

[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "project_0"
version = "1.0.0"
description = "real_world template"
readme = "README.md"
authors = [
    {name = "Intri Desktop", email = "intriqet@outlook.com"},
]
requires-python = ">=3.9"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "alabaster==0.7.13",
    "babel==2.12.1",
    "behave==1.2.6",
    "build==0.10.0",
    "cachetools==5.3.1",
    "certifi==2023.7.22",
    "chardet==5.2.0",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "colorama==0.4.6",
    "distlib==0.3.7",
    "docutils==0.20.1",
    "filelock==3.12.2",
    "idna==3.4",
    "imagesize==1.4.1",
    "iniconfig==2.0.0",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "packaging==23.1",
    "parse==1.19.0",
    "parse-type==0.6.0",
    "pip-tools==7.3.0",
    "platformdirs==3.10.0",
    "pluggy==1.2.0",
    "pygments==2.15.1",
    "pyproject-api==1.5.4",
    "pyproject-hooks==1.0.0",
    "pytest==7.4.0",
    "requests==2.31.0",
    "six==1.16.0",
    "snowballstemmer==2.2.0",
    "sphinx==7.2.2",
    "sphinxcontrib-applehelp==1.0.4",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-plantuml==0.25",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "tox==4.9.0",
    "urllib3==2.0.7",
    "virtualenv==20.24.3",
    "wheel==0.40.0",
]
[project.optional-dependencies]
dev = [
    # Development tools to work on this project
    "sphinx==7.2.2",
    "sphinxcontrib-plantuml==0.25",
    "pip-tools==7.3.0"
]
test = [
    # Testing tools to test this project
    "pytest==7.4.0",
    "tox==4.9.0",
    "behave==1.2.6"
]