# Python Real-World Projects
# Project Zero: A template for other projects

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_0"
version = "0.1.0"
authors = [
    {name = "Author", email = "author@email.com"},
    {name = "Intri Desktop", email = "intriqet@outlook.com"},
]
description = "Real World Python Project"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    # Packages this project requires
]
license = {text = "MIT"}
[project.optional-dependencies]
dev = [
    # Development tools to work on this project
    "sphinx==7.2.2",
    "sphinxcontrib-plantuml==0.25",
    "pip-tools==7.3.0"
]
test = [
    # Testing tools to test this project
    "pytest==7.4.0",
    "tox==4.9.0",
    "behave==1.2.6"
]

[tool.pdm]
distribution = true
